
8.19  2019-07-07
  - Added EXPERIMENTAL check function to Mojo::Exception.
  - Added support for MOJO_EXCEPTION_VERBOSE environment variable.
  - Added -f option to generate plugin command.
  - Improved inspect method in Mojo::Exception to be safe to call more than
    once.
  - Fixed bugs in reply->exception helper that could result in exceptions
    without error message.
  - Fixed daemonize exception handling in Mojo::Server. (skaji)

8.18  2019-06-28
  - Welcome to the Mojolicious core team CandyAngel, Christopher Rasch-Olsen
    Raa and Dan Book.
  - Deprecated the use of the config stash value and $config variable in
    templates by Mojolicious::Plugin::Config. You can use the config helper
    instead. Unfortunately there is no good way to warn users, so this
    deprecation will be in effect until the next major release.
  - Deprecated Mojo::Collection::slice since nobody remembers anymore what its
    intended purpose was.
  - Added EXPERIMENTAL proxy->get_p, proxy->post_p and proxy->start_p helpers to
    Mojolicious::Plugin::DefaultHelpers.
  - Added EXPERIMENTAL dehop method to Mojo::Headers.
  - Added EXPERIMENTAL bytes_waiting and can_write methods to
    Mojo::IOLoop::Stream.
  - Added EXPERIMENTAL high_water_mark attribute to Mojo::IOLoop::Stream.
  - Updated bundled TLS certificate.
  - Improved Mojo::Base flags not to require a certain order.
  - Improved clone performance in Mojo::Headers by 100%.
  - Improved streaming response performance slightly.
  - Fixed a typo in the 425 status message in Mojo::Message::Response.
    (CandyAngel)
  - Fixed a missing deprecation warning in Mojo::Promise. (marcus)

8.17  2019-05-23
  - Fixed a bug in Mojo::UserAgent where the request timeout would not work for
    keep-alive requests. (ilmari)

8.16  2019-05-14
  - Improved Mojo::Headers to reject characters in header values that would
    corrupt the HTTP message.
  - Fixed getopt function in Mojo::Util to behave more like GetOptionsFromArray.